--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.1
   pinput: ^0.2.6
+  flutter_tex: ^4.0.3
+  cloud_firestore: "^0.16.0"
 
 dev_dependencies:
   flutter_test:
